k8s/services/guacamole/deployment-guacamole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  namespace: shopno-tools
  labels:
    app.kubernetes.io/name: guacamole
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: guacamole
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guacamole
    spec:
      serviceAccountName: guacamole
      automountServiceAccountToken: false
      containers:
        - name: guacamole
          image: guacamole/guacamole:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 768Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
