k8s/services/guacamole/deployment-guacd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacd
  namespace: shopno-tools
  labels:
    app.kubernetes.io/name: guacd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: guacd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guacd
    spec:
      serviceAccountName: guacamole
      automountServiceAccountToken: false
      containers:
        - name: guacd
          image: guacamole/guacd:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: guacd
              containerPort: 4822
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
