k8s/services/guacamole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacd
  namespace: shopno-tools
spec:
  selector:
    app.kubernetes.io/name: guacd
  ports:
    - port: 4822
      targetPort: 4822
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: guacamole
  namespace: shopno-tools
spec:
  selector:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/component: server
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
